grammar.txt
unary : INTEGER
      | STRING
      | BOOLEAN
      | VARIABLE

operator : PLUS
         | MINUS
         | TIMES
         | DIVIDE
         | GREATER
         | LESS

greaterEqual: GREATER EQUAL

statements : statement
           | statement statements

statement : ifStatement
          | whileLoop
          | functionDef
          | functionCall
          | varDef
          | varAssign
          | print

print : PRINT OPAREN expression CPAREN SEMI


block : OBRACE statements CBRACE

varDef : LET VARIABLE ASSIGN expression SEMI
       | LET VARIABLE ASSIGN functionDef SEMI

varAssign : VARIABLE ASSIGN expression SEMI
          | VARIABLE ASSIGN functionDef SEMI

functionDef : FUNCTION VARIABLE OPAREN optParameterList CPAREN block
optParameterList : parameterList
                 | *empty*
parameterList : VARIABLE
              | VARIABLE COMMA parameterList

ifStatement : IF OPAREN expression CPAREN block optElse
optElse : ELSE block
        | ELSE ifStatemtent
        | *empty*

expression : unary operator expression
           | unary

whileLoop : WHILE OPAREN expression CPAREN block
